--- a/Note HW/css1.css
+++ b/Note HW/css1.css
@@ -60,8 +60,8 @@
 			border-radius: 5px;
 		}
 		.title_note {
-			height: 10%;
-			width: 70%;
+			height: 10px;
+			width: 170px;
 			margin: 5px;
 		}
 		.con-tent_note {
